[package]
name = "improved-dollop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
axum = "0.4.2"
env_logger = "0.9.0"
log = "0.4.14"
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
rusqlite = "0.26.1"
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.72"
tokio = {version="1.14.0", features=["macros", "rt-multi-thread"]}
